# paper_bergonti_2024_icra_codesign-morphing-drones

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  environment.txt  environment.yml  pyproject.toml  setup.cfg  setup.py
aerodynamics/: README.md
result/: deap_2023-07-08_09h43m49s.pkl  deap_2023-07-09_19h54m55s.pkl  deap_2023-07-10_23h54m13s.pkl  deap_2023-07-12_09h12m55s.pkl  deap_2023-07-13_19h04m08s.csv  deap_2023-07-13_19h04m08s.pkl  deap_2023-07-25_11h13m36s.csv  deap_2023-07-25_11h13m36s.pkl  deap_2023-07-29_22h52m27s.pkl  deap_2023-07-31_08h35m26s.pkl  deap_2024-02-14_10h41m15s.pkl  deap_2024-02-16_14h53m42s.pkl  deap_2024-02-17_05h10m17s.pkl  deap_2024-02-17_21h00m29s.pkl  deap_2024-02-18_13h04m48s.csv  deap_2024-02-18_13h04m48s.pkl  deap_2024-02-19_03h40m06s.pkl  deap_2024-02-19_20h43m05s.csv  deap_2024-02-19_20h43m05s.pkl  deap_2024-02-20_13h02m33s.pkl  deap_2024-02-21_07h20m53s.csv  deap_2024-02-21_07h20m53s.pkl  mt_2023-08-02_09h44m14s.csv  mt_2024-02-01_11h38m14s.csv  mt_2024-02-22_10h31m37s.csv
src/: plot_codesign.py  (+3 more)
src/ros_muav/: CMakeLists.txt  package.xml
src/ros_muav/launch/: display.launch  move_and_display.launch  urdf.rviz  white.rviz
src/ros_muav/meshes/: fixed_wing_elevator.stl  fixed_wing_fuselage.stl  fixed_wing_left_aileron.stl  fixed_wing_right_aileron.stl  fixed_wing_rudder.stl  fuselage0014_tail0009.stl  propeller.stl  wing0009.stl  wing_naca0009.stl
src/ros_muav/urdf/: bix3.urdf  drone_nsga_46295d0_1.toml  drone_nsga_46295d0_1.urdf  drone_nsga_46295d0_2.toml  drone_nsga_46295d0_2.urdf  drone_nsga_46295d0_3.toml  drone_nsga_46295d0_3.urdf  drone_nsga_46295d0_4.toml  drone_nsga_46295d0_4.urdf  fixed_wing_drone.urdf  fixed_wing_drone_back.toml  opt1.toml  opt1.urdf  opt2.toml  opt2.urdf  opt3.toml  opt3.urdf  opt4.toml  opt4.urdf
(+33 files in other folders)
