[metadata]
name = codesign-morphing-drones
description = repository to reproduce the results of the paper "Co-Design Optimisation of Morphing Topology and Control of Winged Drones"
author = "Fabio Bergonti"
author_email = fabio.bergonti@iit.it
url = https://github.com/ami-iit/paper_bergonti_2024_icra_codesign-morphing-drones
version = 0.0.1

keywords =
    robotics
    codesign
    aerodynamics
    morphing

[options]
packages = find:
package_dir =
        = src
python_requires = >=3.8
install_requires =
        pandas
        casadi
        matplotlib
        seaborn
        numpy
        adam-robotics[casadi]
        liecasadi
        toml
        rospkg
        catkin_pkg
        odio_urdf@git+https://github.com/hauptmech/odio_urdf.git
        scipy
        scikit-learn
        pygad
        deap

[options.packages.find]
where = src

[options.extras_require]
test =
        black

[tool:pytest]
addopts = --capture=no --verbose
