<package>
  <name>ros_muav</name>
  <version>0.0.0</version>

  <description>This package contains the URDF of a morphing wing drone.</description>
  <author email="fabio.bergonti@gmail.com">Fabio Bergonti</author>

  <maintainer email="fabio.bergonti@gmail.com">Fabio Bergonti</maintainer>

  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>

</package>
